Fixed layout break for contact page

--- a/src/App.css
+++ b/src/App.css
@@ -67,8 +67,9 @@ body {
   line-height: 1.5rem;
 }
 
-.center-text {
+.heading {
   text-align: center;
+  padding: 1rem;
 }
 
 .btn {
